force-app/main/default/objects/CSVReport__c/CSVReport__c.object-meta.xml
<CustomObject>
    <label>CSV Report</label>
    <nameField>
        <label>CSV Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSV Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>