force-app/main/default/objects/CSVReport__c/fields/Email_as_XLS__c.field-meta.xml
<CustomField>
    <fullName>Email_as_XLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email as XLS</label>
    <type>Checkbox</type>
</CustomField>