force-app/main/default/objects/CSVReport__c/fields/EmailTo__c.field-meta.xml
<CustomField>
    <fullName>EmailTo__c</fullName>
    <label>Scheduled Email Recipient(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>