force-app/main/default/objects/CSVReport__c/fields/SOQL_Finish__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Finish__c</fullName>
    <label>SOQL Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>