force-app/main/default/objects/CSVReport__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>EmailTo__c</columns>
    <columns>Object__c</columns>
    <columns>Email_as_XLS__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FileName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>